MDEV-4720 : fix my_context.h for use with x32 ABI. Do not use x64  assembler implementation in  x32.